--- a/EconomyPShop/resources/language.properties
+++ b/EconomyPShop/resources/language.properties
@@ -1,18 +1,18 @@
 # EconomyPShop language properties file
-no-permission-create-shop=You don't have permission to create shop.
-disallowed-world=The world you are located is not allowed to create shop.
-insert-right-format=Please write the sign in right format.
-shop-created=Your shop was opened with item %3 of "%1" for %MONETARY_UNIT%%2.
+no-permission-create-shop=You don't have permission to create a PShop.
+disallowed-world=The world in which you are located does not allow new PShops.
+shop-created=Your shop was opened selling %3 %1 for %MONETARY_UNIT%%2.
 shop-removed=Your shop has been removed.
 shop-others-removed=%1's shop has been removed.
 no-permission-remove-shop=You don't have permission to remove shop.
-no-shop-tax=You don't have enough money to pay tax.
+no-shop-tax=You don't have enough money to open a shop.
 no-permission-buy=You don't have permission to buy items from shop.
 same-player=You can't buy items from your shop.
-tap-again=Please tap again if you are sure to buy %3 of "%1" for %MONETARY_UNIT%%2
+tap-again=Please tap again if you are sure to buy %3 %1 for %MONETARY_UNIT%%2
 no-stock=Sorry, there is no enough stock in the shop.
 no-space=You have no space in your inventory to buy item.
-bought-item=You have bought %3 of "%1" by %MONETARY_UNIT%%2.
-no-money=You don't have enough money to buy item.
+bought-item=You have bought %3 %1 for %MONETARY_UNIT%%2.
+no-money=You don't have enough money to buy that item.
 shop-owner-no-account=Shop owner does not have an ItemCloud account.
 wrong-num=Wrong price or amount.
+added-queue=Touch any block to create a PShop.
