--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -1,6 +1,6 @@
 name: EconomyShop
-version: 2.0.8-6
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
+version: 2.0.8-7
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
 main: onebone\economyshop\EconomyShop
 author: onebone
 depend: [EconomyAPI]
