--- a/EconomyProperty/plugin.yml
+++ b/EconomyProperty/plugin.yml
@@ -1,8 +1,8 @@
 name: EconomyProperty
 main: onebone\economyproperty\EconomyProperty
-version: "2.0.7-3"
+version: "2.0.7-4"
 author: onebone
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
 depend:
 - EconomyLand
 - EconomyAPI
