--- a/EconomySell/plugin.yml
+++ b/EconomySell/plugin.yml
@@ -1,6 +1,6 @@
 name: EconomySell
-version: 2.0.7-4
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
+version: 2.0.7-5
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
 main: onebone\economysell\EconomySell
 author: onebone
 depend: [EconomyAPI]
