API version bump

--- a/EconomyPShop/plugin.yml
+++ b/EconomyPShop/plugin.yml
@@ -5,6 +5,14 @@ main: onebone\economypshop\EconomyPShop
 
 api:
 - 3.0.0-ALPHA7
+- 3.0.0-ALPHA8
+- 3.0.0-ALPHA9
+- 3.0.0-ALPHA10
+- 3.0.0-ALPHA11
+- 3.0.0-ALPHA12
+- 3.0.0-ALPHA13
+- 3.0.0-ALPHA14
+- 3.0.0-ALPHA15
 
 permissions:
  economypshop.*:
