--- a/EconomyAPI/plugin.yml
+++ b/EconomyAPI/plugin.yml
@@ -15,6 +15,11 @@ api:
 - 3.0.0-ALPHA8
 - 3.0.0-ALPHA9
 - 3.0.0-ALPHA10
+- 3.0.0-ALPHA11
+- 3.0.0-ALPHA12
+- 3.0.0-ALPHA13
+- 3.0.0-ALPHA14
+- 3.0.0-ALPHA15
 
 permissions:
  economyapi.*:
