--- a/EconomyShop/plugin.yml
+++ b/EconomyShop/plugin.yml
@@ -2,6 +2,14 @@ name: EconomyShop
 version: "2.0.7"
 api:
 - 3.0.0-ALPHA7
+- 3.0.0-ALPHA8
+- 3.0.0-ALPHA9
+- 3.0.0-ALPHA10
+- 3.0.0-ALPHA11
+- 3.0.0-ALPHA12
+- 3.0.0-ALPHA13
+- 3.0.0-ALPHA14
+- 3.0.0-ALPHA15
 
 main: onebone\economyshop\EconomyShop
 author: onebone
