--- a/EconomyJob/plugin.yml
+++ b/EconomyJob/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyJob
 main: onebone\economyjob\EconomyJob
 version: "2.0.4-4"
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
 depend: [EconomyAPI]
 author: onebone
 
