--- a/EconomyPShop/plugin.yml
+++ b/EconomyPShop/plugin.yml
@@ -2,7 +2,7 @@ name: EconomyPShop
 version: "2.0.2-6"
 author: onebone
 main: onebone\economypshop\EconomyPShop
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
 commands:
  pshop:
   description: Management command for creating/removing PShops
