--- a/EconomyPShop/resources/language.properties
+++ b/EconomyPShop/resources/language.properties
@@ -16,3 +16,4 @@ no-money=You don't have enough money to buy that item.
 shop-owner-no-account=Shop owner does not have an ItemCloud account.
 wrong-num=Wrong price or amount.
 added-queue=Touch any block to create a PShop.
+shop-create-allow-any-block=You can only create shops on Signs
