--- a/EconomyUsury/plugin.yml
+++ b/EconomyUsury/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyUsury
-version: "1.0.1-5"
+version: "1.0.1-6"
 author: onebone
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
+api: [3.0.0-ALPHA12]
 main: onebone\economyusury\EconomyUsury
 depend: [EconomyAPI]
 
