--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyLand
 main: onebone\economyland\EconomyLand
-api: [3.0.0-ALPHA12]
-version: "2.1.1-6"
+api: [3.0.0]
+version: 2.1.2
 author: onebone
 depend: [EconomyAPI]
 
