--- a/EconomyTax/plugin.yml
+++ b/EconomyTax/plugin.yml
@@ -1,8 +1,8 @@
 name: EconomyTax
 main: onebone\economytax\EconomyTax
 author: onebone
-version: "2.0.3-6"
-api: [3.0.0-ALPHA12]
+version: 2.0.4
+api: [3.0.0]
 depend: [EconomyAPI]
 permissions:
  economytax.tax.avoid:
