--- a/EconomyAirport/plugin.yml
+++ b/EconomyAirport/plugin.yml
@@ -1,16 +1,7 @@
 name: EconomyAirport
 version: "2.0.4"
 author: onebone
-api:
-- 3.0.0-ALPHA7
-- 3.0.0-ALPHA8
-- 3.0.0-ALPHA9
-- 3.0.0-ALPHA10
-- 3.0.0-ALPHA11
-- 3.0.0-ALPHA12
-- 3.0.0-ALPHA13
-- 3.0.0-ALPHA14
-- 3.0.0-ALPHA15
+api: 3.9.0
 
 main: onebone\economyairport\EconomyAirport
 depend: [EconomyAPI]
