Basic works for multi-currency feature
Multi-currency is main feature of next EconomyAPI update. If server
requires another currency other than the currency from EconomyAPI, so
far it needed another plugin to handle this. With multi-currency
feature, EconomyAPI will handle this. Of course, I am planning to
minimize API breaks. Thank you for waiting for long time.

--- a/EconomyAPI/resources/config.yml
+++ b/EconomyAPI/resources/config.yml
@@ -1,5 +1,5 @@
-# monetary-unit: Set what monetary unit you want to use
-monetary-unit: "$"
+# default-currency: Sets default currency
+default-currency: dollar
 # add-op-at-rank: Set whether to show OPs at top money rank
 add-op-at-rank: false
 # default-money: Set default money when player joined the server first
@@ -13,6 +13,18 @@ allow-pay-offline: true
 default-lang: def
 # auto-save-interval: Set interval of auto-save
 auto-save-interval: 10
+
+# List of enabled currencies
+currencies:
+  dollar:
+    # Default money given to player who joined the server first time
+    default: 1000
+    exchange: # Exchange rate for the currency. format: [own currency, target currency]
+      won: [1, 1000]
+  won:
+    default: 0
+    exchange:
+      dollar: [1000, 1]
 
 # provider: Set provider of database (Available: yaml, mysql)
 provider: yaml
