--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -7,11 +7,11 @@ author: onebone
 depend: [EconomyAPI]
 
 permissions:
- economyland.*:
+ economyland:
   description: Allows player to use all functions in EconomyLand
   default: op
   children:
-   economyland.land.*:
+   economyland.land:
     description: Allows player to access all lands
     default: op
     children:
@@ -24,14 +24,14 @@ permissions:
      economyland.land.give.others:
       description: Allows player to give others' land to others'
       default: op
-     economyland.land.move.*:
+     economyland.land.move:
       description: Allows player move to land
       default: op
       children:
        economyland.land.move.others:
         description: Allows player move to others' land
         default: true
-     economyland.landsell.*:
+     economyland.landsell:
       description: Gives permission player to access all land selling function
       default: op
       children:
@@ -39,7 +39,7 @@ permissions:
         description: Allows player to sell others' land
         default: op
 
-   economyland.command.*:
+   economyland.command:
     description: Allows player to use all commands in EconomyLand
     default: op
     children:
