Moved /setlang command to /economy lang

--- a/EconomyAPI/plugin.yml
+++ b/EconomyAPI/plugin.yml
@@ -40,3 +40,6 @@ permissions:
           economyapi.command.takemoney:
             description: Allows player to take money from others
             default: op
+          economyapi.command.economy:
+            description: Command for player to control own configuration
+            default: true
