--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -1,8 +1,7 @@
 name: EconomyLand
 main: onebone\economyland\EconomyLand
 api: 3.9.0
-
-version: "2.0.9"
+version: "3.0.0-ALPHA"
 author: onebone
 depend: [EconomyAPI]
 
@@ -43,18 +42,18 @@ permissions:
     description: Allows player to use all commands in EconomyLand
     default: op
     children:
-     economyland.command.startp:
-      description: Allows player to set start position
-      default: true
-     economyland.command.endp:
-      description: Allows player to set end position
-      default: true
      economyland.command.land:
       description: Allows player to use land command
       default: true
       children:
+       economyland.command.land.pos:
+        description: Allows player to set positions for setting land
+        default: true
        economyland.command.land.buy:
         description: Allows player to buy land
+        default: true
+       economyland.command.land.sell:
+        description: Allows player to sell land
         default: true
        economyland.command.land.move:
         description: Allows player to move to other land
@@ -83,31 +82,8 @@ permissions:
        economyland.command.land.invitee:
         description: Allows player to see invitee
         default: true
-
-     economyland.command.landsell:
-      description: Allows player to sell lands
-      default: op
-      children:
-       economyland.command.landsell.here:
-        description: Allows player to sell land here
-        default: true
-       economyland.command.landsell.number:
-        description: Allows player to sell land with numbers
-        default: true
 commands:
- startp:
-  description: Sets start position
-  usage: /startp
-  permission: economyland.command.startp
- endp:
-  description: Sets second position
-  usage: /endp
-  permission: economyland.command.endp
  land:
   description: Manage land
-  usage: /land <buy|move|list|whose|give|here|[r:]invite|kick|invitee>
-  permission: economyland.command.land;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove;economyland.command.land.invitee
- landsell:
-  description: Sell land
-  usage: /landsell <here|land num>
-  permission: economyland.command.landsell;economyland.command.landsell.here;economyland.command.landsell.number
+  usage: /land <pos1|pos2|buy|sell|move|list|whose|give|here|[r:]invite|kick|invitee>
+  permission: economyland.command.land;economyland.command.land.sell;economyland.command.land.pos;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove;economyland.command.land.invitee
