--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -1,7 +1,7 @@
 name: EconomyLand
 main: onebone\economyland\EconomyLand
 api: 3.9.0
-version: "3.0.0-ALPHA"
+version: "3.0.0-SNAPSHOT"
 author: onebone
 depend: [EconomyAPI]
 
