--- a/EconomyLand/resources/config.yml
+++ b/EconomyLand/resources/config.yml
@@ -1,3 +1,6 @@
+# Language which plugin will use
+language: en
+
 # Land is unloaded if not access by player for a long time.
 # This is a configuration for setting the period to check this task.
 # DO NOT TOUCH THIS if you don't know what you are doing.
