--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -52,6 +52,9 @@ permissions:
        economyland.command.land.buy:
         description: Allows player to buy land
         default: true
+       economyland.command.land.option:
+        description: Allows player to edit option of land
+        default: true
        economyland.command.land.sell:
         description: Allows player to sell land
         default: true
@@ -86,4 +89,4 @@ commands:
  land:
   description: Manage land
   usage: /land <pos1|pos2|buy|sell|move|list|whose|give|here|[r:]invite|kick|invitee>
-  permission: economyland.command.land;economyland.command.land.sell;economyland.command.land.pos;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove;economyland.command.land.invitee
+  permission: economyland.command.land;economyland.command.land.option;economyland.command.land.sell;economyland.command.land.pos;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove;economyland.command.land.invitee
