--- a/EconomyJob/plugin.yml
+++ b/EconomyJob/plugin.yml
@@ -9,7 +9,7 @@ author: onebone
 commands:
  job:
   description: Job master command
-  usage: /job <join|retire|list|me>
+  usage: /job <join|retire|list|detail|me>
   permission: economyjob.command.job
 permissions:
  economyjob.command:
@@ -31,3 +31,7 @@ permissions:
       default: true
      economyjob.command.job.me:
       description: Allows player to use command that allows to see its job
+      default: true
+     economyjob.command.job.detail:
+      description: Allows player to use command that allows to see its job
+      default: true
