--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -8,93 +8,66 @@ author: onebone
 depend: [EconomyAPI]
 
 permissions:
- economyland:
-  description: Allows player to use all functions in EconomyLand
+ economyland.land.modify.others:
+  description: Allows player to modify others' lands
   default: op
-  children:
-   economyland.land:
-    description: Allows player to access all lands
-    default: op
-    children:
-     economyland.land.modify.others:
-      description: Allows player to modify others' lands
-      default: op
-     economyland.land.modify.whiteland:
-      description: Allows player to modify white lands
-      default: op
-     economyland.land.give.others:
-      description: Allows player to give others' land to others'
-      default: op
-     economyland.land.move:
-      description: Allows player move to land
-      default: op
-      children:
-       economyland.land.move.others:
-        description: Allows player move to others' land
-        default: true
-     economyland.landsell:
-      description: Gives permission player to access all land selling function
-      default: op
-      children:
-       economyland.landsell.others:
-        description: Allows player to sell others' land
-        default: op
+ economyland.land.modify.whiteland:
+  description: Allows player to modify white lands
+  default: op
+ economyland.land.give.others:
+  description: Allows player to give others' land to others'
+  default: op
+ economyland.land.move:
+  description: Allows player move to land
+  default: op
+ economyland.land.move.others:
+  description: Allows player move to others' land
+  default: true
+ economyland.landsell.others:
+  description: Allows player to sell others' land
+  default: op
+ economyland.command.startp:
+  description: Allows player to set start position
+  default: true
+ economyland.command.endp:
+  description: Allows player to set end position
+  default: true
+ economyland.command.land:
+  description: Allows player to use land command
+  default: true
+ economyland.command.land.buy:
+  description: Allows player to buy land
+  default: true
+ economyland.command.land.move:
+  description: Allows player to move to other land
+  default: true
+ economyland.command.land.list:
+  description: Allows player to see list of lands
+  default: true
+ economyland.command.land.whose:
+  description: Allows player to see list of lands with specified keyword
+  default: true
+ economyland.command.land.give:
+  description: Allows player give land to other
+  default: true
+ economyland.command.land.here:
+  description: Allows player to see what land player is standing on
+  default: true
+ economyland.command.land.invite:
+  description: Allows player to invite players
+  default: true
+ economyland.command.land.invite.remove.others:
+  default: op
+ economyland.command.land.invitee:
+  description: Allows player to see invitee
+  default: true
+ economyland.command.landsell.here:
+  description: Allows player to sell land here
+  default: true
+ economyland.command.landsell.number:
+  description: Allows player to sell land with numbers
+  default: true
 
-   economyland.command:
-    description: Allows player to use all commands in EconomyLand
-    default: op
-    children:
-     economyland.command.startp:
-      description: Allows player to set start position
-      default: true
-     economyland.command.endp:
-      description: Allows player to set end position
-      default: true
-     economyland.command.land:
-      description: Allows player to use land command
-      default: true
-      children:
-       economyland.command.land.buy:
-        description: Allows player to buy land
-        default: true
-       economyland.command.land.move:
-        description: Allows player to move to other land
-        default: true
-       economyland.command.land.list:
-        description: Allows player to see list of lands
-        default: true
-       economyland.command.land.whose:
-        description: Allows player to see list of lands with specified keyword
-        default: true
-       economyland.command.land.give:
-        description: Allows player give land to other
-        default: true
-       economyland.command.land.here:
-        description: Allows player to see what land player is standing on
-        default: true
-       economyland.command.land.invite:
-        description: Allows player to invite players
-        default: true
-       economyland.command.land.invite.remove:
-        description: Allows player to remove invitee from the list
-        default: true
-        children:
-         economyland.command.land.invite.remove.others:
-          default: op
-       economyland.command.land.invitee:
-        description: Allows player to see invitee
-        default: true
-
-     economyland.command.landsell:
-      description: Allows player to sell lands
-      default: op
-      children:
-       economyland.command.landsell.here:
-        description: Allows player to sell land here
-        default: true
-       economyland.command.landsell.number:
-        description: Allows player to sell land with numbers
-        default: true
 commands:
  startp:
   description: Sets start position
@@ -107,8 +80,8 @@ commands:
  land:
   description: Manage land
   usage: /land <buy|move|list|whose|give|here|[r:]invite|kick|invitee>
-  permission: economyland.command.land;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove;economyland.command.land.invitee
+  permission: economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove.others;economyland.command.land.invitee
  landsell:
   description: Sell land
   usage: /landsell <here|land num>
-  permission: economyland.command.landsell;economyland.command.landsell.here;economyland.command.landsell.number
+  permission: economyland.command.landsell.here;economyland.command.landsell.number
