--- a/EconomyLand/plugin.yml
+++ b/EconomyLand/plugin.yml
@@ -82,11 +82,9 @@ permissions:
         children:
          economyland.command.land.invite.remove.others:
           default: op
-       economyland.command.land.invitee:
-        description: Allows player to see invitee
-        default: true
+
 commands:
  land:
   description: Manage land
-  usage: /land <pos1|pos2|buy|sell|move|list|whose|give|here|[r:]invite|kick|invitee>
-  permission: economyland.command.land;economyland.command.land.option;economyland.command.land.sell;economyland.command.land.pos;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove;economyland.command.land.invitee
+  usage: /land <pos1|pos2|buy|here|option|invite> [args...]
+  permission: economyland.command.land;economyland.command.land.option;economyland.command.land.sell;economyland.command.land.pos;economyland.command.land.buy;economyland.command.land.move;economyland.command.land.list;economyland.command.land.whose;economyland.command.land.give;economyland.command.land.here;economyland.command.land.invite;economyland.command.land.invite.remove
